[package]
name = "rams"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = { version = "0.9" }
confy = { version = "0.4" }
glob = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
